kubernetes/05-addons/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: “true”
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: cert-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - k8s.example.com
      secretName: kubernetes-dashboard-tls
  rules:
    - host: k8s.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard-kong-proxy
                port:
                  number: 443
